# texflow

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/templates/journal/: bibliography.bib  input.json  main.tex  style.sty
src/: main.py
src/classes/: data.py  task.py
src/configs/: paths.py  style.py  templates.py
src/scripts/: builder.py  cli.py  utils.py
